<resources>
    <string name="app_name">Activate</string>
    <string name="auth_activity_label">Autenticación</string>
    <string name="login_activity_label">Ingreso</string>
    <string name="register_activity_label">Creación de usuario</string>
    <string name="main_activity_label">Principal</string>
    <string name="settings_activity_label">Configuración</string>
    <string name="history_activity_label">Historial</string>
    <string name="text_welcome">¡Bienvenido! Por favor, ingrese el patrón de desbloqueo para comenzar.</string>
    <string name="edit_text_email_login">Usuario (email)</string>
    <string name="edit_text_password">Contraseña</string>
    <string name="text_registration">Si aún no tiene un usuario creado, puede crear uno pulsando el siguiente botón</string>
    <string name="button_login">Ingresar</string>
    <string name="button_registration">Crear usuario</string>
    <string name="button_register">Crear</string>
    <string name="edit_text_name">Nombre</string>
    <string name="edit_text_lastname">Apellido</string>
    <string name="edit_text_dni">DNI</string>
    <string name="edit_text_email_register">Email</string>
    <string name="edit_text_new_password">Contraseña</string>
    <string name="edit_text_commission">Comisión</string>
    <string name="edit_text_group">Grupo</string>
    <string name="env">PROD</string>
    <string name="text_goal_label">Mi meta de hoy</string>
    <string name="text_progress_label">Pasos realizados</string>
    <string name="text_percentage_label">Porcentaje completado</string>
    <string name="text_view_goal">Mi meta diaria</string>
    <string name="edit_text_goal_hint">Escribe un numero</string>
    <string name="settings_step_goal_key">GOAL</string>
    <string name="settings_save">Guardar</string>
    <string name="shared_preferences_history">com.soa.app.history</string>
    <string name="shared_preferences_settings">com.soa.app.settings</string>
    <string name="shared_preferences_token">com.soa.app.token</string>
    <string name="text_date">FECHA</string>
    <string name="text_steps">PASOS</string>
    <string name="text_goal">META</string>
    <string name="text_completed">COMPLETA</string>
</resources>
