<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:text="@string/settings_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_goal"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/text_view_goal"
        android:layout_width="324dp"
        android:layout_height="39dp"
        android:padding="4dp"
        android:text="@string/text_view_goal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edit_text_goal"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:hint="@string/edit_text_goal_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_goal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/hidden_label"
        android:layout_width="357dp"
        android:layout_height="125dp"
        android:inputType="textMultiLine"
        android:text="SOA - 1C- 2021 - Grupo 3\n\nSergio Amoruso - Sendras Bruno - Baini Hernan\n\n ¡Gracias por usar nuesta app!"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>
